tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_api_ssh_types.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                     "
"                                                            "
"   GitHub                                     2024-06-15◀   "
"                                                            "
"────────────────────────────────────────────────────────────"
"   [API] AWS Key                                  2024-06-15"
"                                                            "
"────────────────────────────────────────────────────────────"
"   [SSH] Server                                   2024-06-15"
"                                                            "
"────────────────────────────────────────────────────────────"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
