tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_empty_state.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                     "
"                            🔐                              " Hidden by multi-width symbols: [(29, " ")]
"                                                            "
"                      No passwords yet                      "
"                                                            "
"            Press n to create your first password           "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
