tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_empty_trash.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                     "
"                             🗑                              "
"                                                            "
"                       Trash is empty                       "
"                                                            "
"             Deleted passwords will appear here             "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
