tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_health_badge_compromised.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                     "
"  HackedSite 🔴Leaked                            2024-06-15 " Hidden by multi-width symbols: [(14, " ")]
"  site.com                                                  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
