tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_health_badge_weak.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                     "
"                                                            "
"  WeakPass ⚠Weak                                2024-06-15  "
"  site.com                                                  "
"────────────────────────────────────────────────────────────"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
