tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_narrow_width.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                                                   "
"                                                                                          "
"  GitHub                                                                   2024-06-15◀    "
"──────────────────────────────────────────────────────────────────────────────────────────"
"  GitLab                                                                        2024-06-15"
"──────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
