tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_search_highlight.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  🔍 Search: git_                                           " Hidden by multi-width symbols: [(3, " ")]
"                                                            "
"   GitHub                                     2024-06-15◀   "
"   user@github.com                                          "
"────────────────────────────────────────────────────────────"
"   GitLab                                         2024-06-15"
"   dev@gitlab.com                                           "
"────────────────────────────────────────────────────────────"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
