tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_search_multi_term.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  🔍 Search: git api_                                       " Hidden by multi-width symbols: [(3, " ")]
"  GitHub API                                    2024-06-15 ◀"
"  api.github.com                                            "
"────────────────────────────────────────────────────────────"
"  GitLab SSH                                      2024-06-15"
"  ssh.gitlab.com                                            "
"────────────────────────────────────────────────────────────"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
