tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__list_test__list_trash_rows.snap
---
source: tests/snapshot_tests/screens/list_test.rs
expression: terminal.backend()
---
"  Sort: [ Created ▼ ]  [ ↓ Descending ]                     "
"                                                            "
"  OldSite                                                   "
"  Deleted 5 days ago  Auto-delete in 25 days                "
"────────────────────────────────────────────────────────────"
"  Another                                                   "
"  Deleted 20 days ago  ⚠   Auto-delete in 10 days           "
"────────────────────────────────────────────────────────────"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
